--- a/customizations/organization/15383/bannergenerator/bannergeneratorEN.html
+++ b/customizations/organization/15383/bannergenerator/bannergeneratorEN.html
@@ -50,7 +50,7 @@
     bottom: -1px;
     height: 100%;
     width: 100%;
-    border-bottom: 3px solid #638832;
+    border-bottom: 3px solid #48a9c5;
     transform: translateX(-100%);
     transition: transform 0.3s ease;
   }
@@ -71,58 +71,64 @@
     transform: translateX(0%);
   }
   .btn {
-    background-color: white;
-    border: 2px solid #a84720;
-    color: #a84720;
-    padding: 8px !important;
-    border-radius: 5px;
+    background-color: #48a9c5;
+    border: 2px solid #48a9c5;
+    color: white;
+    padding-top: 18px !important;
+    padding-right: 36px !important;
+    padding-bottom: 18px !important;
+    padding-left: 36px !important;
+    border-radius: 50px;
     font-size: 18px !important;
   }
   .btn:hover {
-    background-color: #638832;
-    color: white;
-    border-color: #638832;
+    background-color: white;
+    color: black;
+    border-color: black;
   }
   .btn_secondary {
-    background-color: white;
-    border: none;
-    color: #a84720;
-    padding: 8px !important;
-    border-radius: 5px;
+    background-color: #48a9c5;
+    border: 2px solid #48a9c5;
+    color: white;
+    padding-top: 18px !important;
+    padding-right: 36px !important;
+    padding-bottom: 18px !important;
+    padding-left: 36px !important;
+    border-radius: 50px;
     font-size: 18px !important;
   }
   .btn_secondary:hover {
-    background-color: #638832;
-    color: white;
-    border-color: #638832;
+    background-color: white;
+    color: black;
+    border-color: black;
   }
  </style>
  <div>
   <div class="signup__container signup__form">
    <form>
-    <img style="display: none" id="banner_img" crossorigin="anonymous" src="https://viovendi.github.io/customizations/organization/14426/bannergenerator/2022_JH_Ausstellerbanner_Juni_160x600_GB.png">
+    <img style="display: none" id="banner_img" crossorigin="anonymous" src="https://viovendi.github.io/customizations/organization/15383/bannergenerator/Structures_Ausstellerbanner_160x600_D_RZ.png">
     <fieldset class="halle__stand">
      <div class="form-group">
       <select name="format" size="1" id="format_inp" class="form__input form-control" required="required">
        <option value="" disabled="" selected="" hidden="">
        </option>
        <option value="vertikal">
-        120 x 600 (Vertical banner)
+        120 x 600 (Vertikaler Banner)
        </option>
        <option value="horizontal">
-        468 x 60 (Horizontal banner)
+        468 x 60 (Horizontaler Banner)
        </option>
        <option value="email">
-        180 x 60 (Email signature)
+        180 x 60 (Email-Signatur)
        </option>
        <option value="instagrampost">
-        1080 x 1080 (Instagram post)
+        1080 x 1080 (Instagram Post)
        </option>
        <option value="instagramstory">
         1080 x 1350 (Instagram Story)
        </option>
        <option value="facebook">
-        1080 x 1350 (Facebook post)
+        1080 x 1350 (Facebook Post)
        </option>
       </select>
       <label class="form__label form__label__select">
@@ -156,7 +162,7 @@
       </select>
       <label class="form__label">
        <span class="label__content">
-        Hall
+        Halle
        </span>
       </label>
      </div>
@@ -186,6 +192,6 @@
    <canvas id="canvas" crossorigin="anonymous" style="display: block; margin: auto">
    </canvas>
   </div>
-  <script src="https://viovendi.github.io/customizations/organization/14426/bannergenerator/bannergeneratorEN.js">
+  <script src="https://viovendi.github.io/customizations/organization/15383/bannergenerator/bannergeneratorDE.js">
   </script>
  </div>
