--- a/customizations/organization/14127/bannergenerator_intertabac/bannergeneratorES.html
+++ b/customizations/organization/14127/bannergenerator_intertabac/bannergeneratorES.html
@@ -135,6 +135,15 @@
       <select name="halle" id="halle_inp" class="form__input form-control" required="required">
        <option value="" disabled="" selected="" hidden="">
        </option>
+       <option value="Westfalenhalle">
+        Westfalenhalle
+       </option>
+       <option value="1">
+        1
+       </option>
+       <option value="2">
+        2
+       </option>
        <option value="3B">
         3B
        </option>
