--- a/customizations/organization/15396/bannergenerator/bannergeneratorEN.html
+++ b/customizations/organization/15396/bannergenerator/bannergeneratorEN.html
@@ -100,7 +100,7 @@
  <div>
   <div class="signup__container signup__form">
    <form>
-    <img style="display: none" id="banner_img" crossorigin="anonymous" src="https://viovendi.github.io/customizations/organization/15396/bannergenerator/2023_ET_Webbanner_Aussteller_160x600_GB.png">
+    <img style="display: none" id="banner_img" crossorigin="anonymous" src="https://viovendi.github.io/customizations/organization/15396/bannergenerator/ET_23_Ausstellerbanner_160x600_E.png">
     <fieldset class="halle__stand">
      <div class="form-group">
       <select name="format" size="1" id="format_inp" class="form__input form-control" required="required">
@@ -109,7 +109,7 @@
        <option value="vertikal">
         120 x 600 (Vertical banner)
        </option>
-<!--       <option value="horizontal">
+       <option value="horizontal">
         468 x 60 (Horizontal banner)
        </option>
        <option value="email">
@@ -123,7 +123,7 @@
        </option>
        <option value="facebook">
         1080 x 1350 (Facebook post)
-       </option>  -->
+       </option>
       </select>
       <label class="form__label form__label__select">
        <span class="label__content">
